[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
exclude = ".venv"
line-length = 80
target-version = ["py39"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "pass",
    "if __name__ == .__main__.:",
    "nocov",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true

[tool.coverage.run]
branch = true
omit = [
    "tests/*"
]

[tool.poetry]
authors = ["Dawid Kraczkowski <dawid.kraczkowski@kaizenreporting.com>"]
description = "Abstraction Layer for Amazon DynamoDB"
license = "MIT"
name = "amano"
version = "0.2.0"

[tool.poetry.dependencies]
boto = "^2.49.0"
boto3 = "^1.24.57"
botocore = "^1.27.57"
chili = "^1.7.0"
gid = "^1.0.1"
mypy-boto3-dynamodb = "^1.24.36"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.14.5"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
toml-sort = "^0.20.0"
bandit = "^1.7.4"

[[tool.poetry.source]]
default = true
name = 'default'
url = 'https://pypi.python.org/simple'
